--- a/noson.appdata.xml.in
+++ b/noson.appdata.xml.in
@@ -21,6 +21,7 @@
     </screenshot>
   </screenshots>
   <releases>
+    <release date="2019-11-30" version="4.0.2"/>
     <release date="2019-11-29" version="4.0.1"/>
     <release date="2019-11-25" version="4.0.0"/>
     <release date="2019-11-09" version="3.16.1"/>
