clear include of private headers from libnoson

--- a/backend/cli/CMakeLists.txt
+++ b/backend/cli/CMakeLists.txt
@@ -24,6 +24,11 @@ set(
   noson.cpp
 )
 
+set(
+  noson-cli_HEADERS
+  tokenizer.h
+)
+
 add_executable (noson-cli ${noson-cli_SOURCES})
 
 if(NOT noson_FOUND)
