cleanup include directories

--- a/backend/NosonMediaScanner/CMakeLists.txt
+++ b/backend/NosonMediaScanner/CMakeLists.txt
@@ -81,7 +81,7 @@ set(
   aggregate/tracks.h
 )
 
-include_directories (${CMAKE_CURRENT_SOURCE_DIR})
+include_directories (${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 
 if(QT_STATICPLUGIN)
     add_library(NosonMediaScanner STATIC ${NosonMediaScanner_SOURCES})
