--- a/backend/lib/CMakeLists.txt
+++ b/backend/lib/CMakeLists.txt
@@ -96,8 +96,7 @@ add_subdirectory(
     EXCLUDE_FROM_ALL
 )
 set(noson_LIBRARIES noson                               PARENT_SCOPE)
-set(noson_INCLUDE_DIRS "${noson_BINARY_DIR}/public/noson"
-    "${noson_BINARY_DIR}/public"                        PARENT_SCOPE)
+set(noson_INCLUDE_DIRS "${noson_BINARY_DIR}/public"     PARENT_SCOPE)
 set(noson_FOUND ON                                      PARENT_SCOPE)
 message(STATUS "Build noson: ${noson_BINARY_DIR}")
 
