Initial basic working sfos version.
Can add music source
Select a zone
Browse a service
Play to a zone
View playlist

--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -6,7 +6,10 @@ find_package(Qt5Core REQUIRED)
 find_package(Qt5Gui REQUIRED)
 find_package(Qt5Qml REQUIRED)
 find_package(Qt5Quick REQUIRED)
-if (NOT BUILD_SAILFISHOS)
+if (BUILD_SAILFISHOS)
+find_package(PkgConfig)
+pkg_search_module(SFOS REQUIRED sailfishapp)
+else()
 find_package(Qt5QuickControls2 REQUIRED)
 endif()
 find_package(Qt5Widgets REQUIRED)
@@ -55,10 +58,6 @@ endif()
 
 add_definitions(-DAPP_VERSION="${APP_VERSION}")
 
-if (BUILD_SAILFISHOS)
-add_definitions(-DSAILFISHOS)
-endif()
-
 qt5_add_resources(noson-gui-resources noson.qrc)
 
 if(ANDROID)
@@ -70,7 +69,8 @@ else()
 endif()
 
 if (BUILD_SAILFISHOS)
-target_link_libraries(noson-gui Qt5::Gui Qt5::Qml Qt5::Quick Qt5::Widgets Qt5::Xml Qt5::Svg)
+add_definitions(-DSAILFISHOS)
+target_link_libraries(noson-gui Qt5::Gui Qt5::Qml Qt5::Quick Qt5::Widgets Qt5::Xml Qt5::Svg sailfishapp)
 else()
 target_link_libraries(noson-gui Qt5::Gui Qt5::Qml Qt5::Quick Qt5::QuickControls2 Qt5::Widgets Qt5::Xml Qt5::Svg)
 endif()
