re-enable build for qt<5.12

--- a/backend/CMakeLists.txt
+++ b/backend/CMakeLists.txt
@@ -2,12 +2,18 @@ cmake_minimum_required(VERSION 3.1.0)
 
 OPTION (BUILD_LIBNOSON "Build libnoson from sources." ON)
 
+find_package(Qt5Core REQUIRED)
+message(STATUS "Found Qt5 version ${Qt5Core_VERSION}")
+
 if(NOT BUILD_DEPENDENCIES)
     if(NOT BUILD_LIBNOSON)
         find_package(noson 2.1 REQUIRED)
     endif()
 endif()
 if(NOT noson_FOUND)
+    if(Qt5Core_VERSION VERSION_LESS 5.12.4)
+        set(OPENSSL_DL_ABI "1.0")
+    endif()
     add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/lib)
 endif()
 
