[SFOS] rebase noson-app 4.1.0

--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -8,7 +8,7 @@ find_package(Qt5Qml REQUIRED)
 find_package(Qt5Quick REQUIRED)
 if (BUILD_SAILFISHOS)
 find_package(PkgConfig)
-pkg_search_module(SFOS REQUIRED sailfishapp)
+#pkg_search_module(SFOS REQUIRED sailfishapp)
 else()
 find_package(Qt5QuickControls2 REQUIRED)
 endif()
@@ -21,6 +21,9 @@ file(GLOB APP_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.qml *.js *.json)
 
 add_subdirectory(components)
 add_subdirectory(ui)
+if (BUILD_SAILFISHOS)
+  add_subdirectory(sfos)
+endif()
 
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_STANDARD 11)
