--- a/noson.appdata.xml.in
+++ b/noson.appdata.xml.in
@@ -21,6 +21,7 @@
     </screenshot>
   </screenshots>
   <releases>
+    <release date="2020-01-10" version="4.2.3"/>
     <release date="2020-01-05" version="4.2.2"/>
     <release date="2020-01-04" version="4.2.1"/>
     <release date="2020-01-04" version="4.2.0"/>
