use the proper method to find library sailfishapp

--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -7,8 +7,8 @@ find_package(Qt5Gui REQUIRED)
 find_package(Qt5Qml REQUIRED)
 find_package(Qt5Quick REQUIRED)
 if (BUILD_SAILFISHOS)
-find_package(PkgConfig)
-#pkg_search_module(SFOS REQUIRED sailfishapp)
+  find_package(PkgConfig)
+  pkg_check_modules(LIBSAILFISHAPP REQUIRED sailfishapp)
 else()
 find_package(Qt5QuickControls2 REQUIRED)
 endif()
@@ -73,7 +73,8 @@ endif()
 
 if(BUILD_SAILFISHOS)
   add_definitions(-DSAILFISHOS)
-  target_link_libraries(noson-gui Qt5::Gui Qt5::Qml Qt5::Quick Qt5::Widgets Qt5::Xml Qt5::Svg sailfishapp)
+  include_directories(${LIBSAILFISHAPP_INCLUDE_DIRS})
+  target_link_libraries(noson-gui Qt5::Gui Qt5::Qml Qt5::Quick Qt5::Widgets Qt5::Xml Qt5::Svg ${LIBSAILFISHAPP_LIBRARIES})
 else()
   target_link_libraries(noson-gui Qt5::Gui Qt5::Qml Qt5::Quick Qt5::QuickControls2 Qt5::Widgets Qt5::Xml Qt5::Svg)
 endif()
