fix build on SunOS platforms

--- a/backend/cli/CMakeLists.txt
+++ b/backend/cli/CMakeLists.txt
@@ -42,4 +42,9 @@ endif()
 
 target_link_libraries(noson-cli ${noson-cli_LIBRARIES})
 
+if(${CMAKE_SYSTEM_NAME} STREQUAL "SunOS")
+  find_library(SOCKET socket REQUIRED)
+  target_link_libraries(noson-cli socket)
+endif()
+
 install(TARGETS noson-cli DESTINATION ${PLUGINS_DIR}/)
