--- a/noson.appdata.xml.in
+++ b/noson.appdata.xml.in
@@ -21,6 +21,7 @@
     </screenshot>
   </screenshots>
   <releases>
+    <release date="2020-12-07" version="4.4.5"/>
     <release date="2020-06-28" version="4.4.2"/>
     <release date="2020-06-16" version="4.4.0"/>
     <release date="2020-06-01" version="4.3.4"/>
