--- a/noson.appdata.xml.in
+++ b/noson.appdata.xml.in
@@ -21,6 +21,7 @@
     </screenshot>
   </screenshots>
   <releases>
+    <release date="2021-02-05" version="4.4.8"/>
     <release date="2020-12-27" version="4.4.7"/>
     <release date="2020-12-11" version="4.4.6"/>
     <release date="2020-12-07" version="4.4.5"/>
